--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -60,7 +60,7 @@ html, body {
 from javascript import JSObject, JSConstructor
 from browser import document, window, alert
 
-# Create the map and an OpenStreetMaps layer
+# Create the map and an OpenStreetMap layer
 ol = window.OpenLayers
 layer = JSConstructor(ol.Layer.OSM)()
 map = JSConstructor(ol.Map)("mapdiv")
