use rawgit as a CDN for the custom brython_dist.js file

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,7 @@
 
  <head>
      <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-     <script src="http://brython.info/src/brython_dist.js"></script>
+     <script src="https://cdn.rawgit.com/kikocorreoso/map2wiki/master/src/static/brython_dist.js"></script>
      <style>
 body {font-family: 'Open Sans', sans-serif;}
 
