--- a/src/templates/wiki.html
+++ b/src/templates/wiki.html
@@ -29,11 +29,11 @@
  <body>
 	 <div id="header">
 		 |
-		 <a href="{{ url_for('index') }}">{{ _('Go to map') }}</a> 
+		 <a href="{{ url_for('index') }}">Ir al mapa inicial</a> 
 		 | 
-		 <a href="/index?lon={{ address['lon'] }}&lat={{ address['lat'] }}&zoom=18">{{ _('Go to latest location') }}</a> 
+		 <a href="/index?lon={{ address['lon'] }}&lat={{ address['lat'] }}&zoom=18">Ir a la última posición</a> 
 		 |
-		 <a href="{{ url_for('about') }}">{{ _('About') }}</a> 
+		 <a href="{{ url_for('about') }}">Acerca de la aplicación</a> 
 		 |
 	 </div>
   
