--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,9 +1,10 @@
 <html>
 
  <head>
-     <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-     <script src="https://cdn.rawgit.com/kikocorreoso/map2wiki/master/src/static/brython_dist.js"></script>
-     <style>
+  <title>map2wiki | Map search</title>      
+  <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+  <script src="https://cdn.rawgit.com/kikocorreoso/map2wiki/master/src/static/brython_dist.js"></script>
+  <style>
 body {font-family: 'Open Sans', sans-serif;}
 
 html, body {
@@ -57,7 +58,7 @@ html, body {
 	border-color: #000; 
 	color: blue;
 }
-     </style>
+  </style>
  </head>
 
  <body onload="brython(1)">
