--- a/src/templates/wiki.html
+++ b/src/templates/wiki.html
@@ -1,7 +1,8 @@
 <html>
 
  <head>
-     <style>
+  <title>map2wiki | Wikipedia and Nominatim results</title>   
+  <style>
 #json {
 	font-family: "Courier New", Courier, monospace;
 	font-size: 12px;
@@ -23,7 +24,7 @@
 #header {
 	margin: 1%;
 }
-     </style>
+  </style>
  </head>
 
  <body>
